[project]
name = "devto"
dynamic = ["version"]
description = "Modern Dev.To API client built with aiohttp and pydantic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "aiohttp-client-cache>=0.12.4",
    "aiosqlite>=0.20.0",
    "loguru>=0.7.3",
    "pydantic>=2.10.4",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "ruff>=0.7.2",
  {include-group = "test"},
  "mypy>=1.14.1",
  "isort>=5.13.2",
  "types-requests>=2.32.0.20241016",
  "python-semantic-release>=9.15.2",
]
test = [
  "pytest-cov>=6.0.0",
  "pytest>=8.3.3",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true


[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "uv build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default
